# bible_lsp

./: Cargo.toml  README.md  autocomplete.txt  design.md  input.txt
examples/: alexis.rs
src/: api_wrappers.rs  autocompletion.rs  bible_api.rs  bible_formatter.rs  bible_json.rs  bible_lsp.rs  book_reference.rs  book_reference_segment.rs  main.rs  re.rs
