[package]
name = "bible_lsp"
version = "0.1.0"
edition = "2021"

[dependencies]
cached = "0.54.0"
lazy_static = "1.5.0"
once_cell = "1.20.2"
regex = "1.11.0"
serde = { version = "1.0.210", features = ["derive"]}
serde_json = "1.0.129"
tempfile = "3.13.0"
tokio = { version = "1", features = ["full"]}
tower-lsp = "0.20.0"
